Some small fixes during testing